--- a/SORE/SORE_settings.json
+++ b/SORE/SORE_settings.json
@@ -2,28 +2,31 @@
   "Prepare_data": false,
   "Parse_narrowIE_predictions": true,
   "Run_OIE": false,
-  "Filter_OIE": false,
+  "Filter_OIE": true,
+  "data_prep": {
+    "max_num_docs_narrowIE" : 200
+  },
   "narrowIE" : {
     "RELATIONS_TO_STORE": "TRADEOFFS_AND_ARGMODS",
-    "narrowIE_input_files": ["",
-                             ""]
+    "narrowIE_input_files": ["BMC_6884#1-400_narrowIE_input.json",
+                             "BMC_6884#1200-1600_narrowIE_input.json"]
   },
   "OpenIE": {
     "path_to_OIE_jar": "/Users/rubenkruiper/dev/OpenIE-standalone/target/scala-2.10/openie-assembly-5.0-SNAPSHOT.jar"
   },
   "Filtering": {
-    "prefix": "TestRun",
+    "prefix": "TestRun1",
     "sp_size": 16000,
     "SUBWORDUNIT": true,
     "SUBWORD_UNIT_COMBINATION": "avg",
     "STEMMING": false,
-    "STOPWORDS": false,
-    "number_of_clusters": 10,
+    "STOPWORDS": true,
+    "number_of_clusters": 4,
     "print_stats": true,
     "filter_settings": {
-          "oie_cutoff": 0.7,
+          "oie_cutoff": 0.6,
           "sim_type": "cos",
-          "sim_threshold": 0.85,
+          "sim_threshold": 0.65,
           "token_length_threshold": 25,
           "idf_threshold": 2.0
     }
