--- a/SORE/SORE_settings.json
+++ b/SORE/SORE_settings.json
@@ -1,34 +1,35 @@
 {
-  "Prepare_data": true,
-  "Parse_narrowIE_predictions": true,
-  "Run_OIE": true,
-  "Filter_OIE": true,
+  "Prepare_data": false,
+  "Parse_narrowIE_predictions": false,
+  "Run_OIE": false,
+  "Filter_OIE": false,
   "data_prep": {
     "max_num_docs_narrowIE" : 200
   },
   "narrowIE" : {
-    "RELATIONS_TO_STORE": "TRADEOFFS_AND_ARGMODS",
-    "narrowIE_input_files": ["predictions_example_input.json",
-                             "predictions_example_input.json"]
+    "RELATIONS_TO_STORE": "ALL",
+    "narrowIE_input_files": ["OA-STM_example_corpus.json"]
   },
   "OpenIE": {
     "path_to_OIE_jar": "/Users/rubenkruiper/dev/OpenIE-standalone/target/scala-2.10/openie-assembly-5.0-SNAPSHOT.jar"
   },
   "Filtering": {
-    "prefix": "TestRun1",
-    "sp_size": 16000,
+    "prefix": "OA-STM",
+    "file_names": ["OA-STM"],
+    "sp_size": 8000,
     "SUBWORDUNIT": true,
     "SUBWORD_UNIT_COMBINATION": "avg",
     "STEMMING": false,
     "STOPWORDS": true,
-    "number_of_clusters": 4,
+    "number_of_clusters": 35,
     "print_stats": true,
     "filter_settings": {
           "oie_cutoff": 0.65,
           "sim_type": "cos",
           "sim_threshold": 0.6,
           "token_length_threshold": 25,
-          "idf_threshold": 1.2
+          "idf_threshold": 1.0
     }
-  }
+  },
+  "convert_back_to_BRAT": true
 }
