--- a/docs/.readthedocs.yml
+++ b/docs/.readthedocs.yml
@@ -23,8 +23,8 @@ formats:
 #   install:
 #     - requirements: requirements.txt
 conda:
-  environment: environment.yml
-  
+  environment: docs/environment.yml
+
 build:
   image: latest
 
