--- a/docs/.readthedocs.yml
+++ b/docs/.readthedocs.yml
@@ -18,10 +18,11 @@ formats:
   - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
-# python:
-#   version: 3.7
-#   install:
-#     - requirements: requirements.txt
+python:
+  version: 3.7
+  install:
+    - requirements: requirements.txt
+    
 conda:
   environment: docs/environment.yml
 
